k8s/backend.yaml
## << 변수 >> 치환 필요

## << ECR URI >>      => ex) 123456789012.dkr.ecr.us-east-1.amazonaws.com
## << SERVICE NAME >> => ex) eshop-backend
## << TAG >>          => ex) latest

## << ECR URI >>/<< SERVICE NAME >>:<< TAG >> => ex) 123456789012.dkr.ecr.us-east-1.amazonaws.com/eshop-backend:latest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-backend
spec:
  selector:
    matchLabels:
      app: eshop-backend
  template:
    metadata:
      labels:
        app: eshop-backend
    spec:
      containers:
        - name: eshop-backend
          image: 894231944791.dkr.ecr.us-east-1.amazonaws.com/eshop-backend:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8090
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-backend
spec:
  type: ClusterIP
  selector:
    app: eshop-backend
  ports:
  - port: 8090
