k8s/cartservice.yaml
## << 변수 >> 치환 필요

## << ECR URI >>      => ex) 123456789012.dkr.ecr.us-east-1.amazonaws.com
## << SERVICE NAME >> => ex) eshop-backend
## << TAG >>          => ex) latest

## << ECR URI >>/<< SERVICE NAME >>:<< TAG >> => ex) 123456789012.dkr.ecr.us-east-1.amazonaws.com/eshop-backend:latest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-cartservice
spec:
  selector:
    matchLabels:
      app: eshop-cartservice
  template:
    metadata:
      labels:
        app: eshop-cartservice
    spec:
      containers:
        - name: eshop-cartservice
          image: 894231944791.dkr.ecr.us-east-1.amazonaws.com/eshop-cartservice:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-cartservice
spec:
  type: ClusterIP
  selector:
    app: eshop-cartservice
  ports:
  - port: 8091
