k8s/frontend.yaml
## << 변수 >> 치환 필요

## << ECR URI >>      => ex) 123456789012.dkr.ecr.us-east-1.amazonaws.com
## << SERVICE NAME >> => ex) eshop-backend
## << TAG >>          => ex) latest

## << ECR URI >>/<< SERVICE NAME >>:<< TAG >> => ex) 123456789012.dkr.ecr.us-east-1.amazonaws.com/eshop-backend:latest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-frontend
spec:
  selector:
    matchLabels:
      app: eshop-frontend
  template:
    metadata:
      labels:
        app: eshop-frontend
    spec:
      containers:
        - name: eshop-frontend
          image: 894231944791.dkr.ecr.us-east-1.amazonaws.com/eshop-frontend:latest
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-frontend
spec:
  type: ClusterIP
  selector:
    app: eshop-frontend
  ports:
  - port: 8080
