k8s/recommendservice.yaml
## << 변수 >> 치환 필요

## << ECR URI >>      => ex) 123456789012.dkr.ecr.us-east-1.amazonaws.com
## << SERVICE NAME >> => ex) eshop-backend
## << TAG >>          => ex) latest

## << ECR URI >>/<< SERVICE NAME >>:<< TAG >> => ex) 123456789012.dkr.ecr.us-east-1.amazonaws.com/eshop-backend:latest

apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-recommendservice
spec:
  selector:
    matchLabels:
      app: eshop-recommendservice
  template:
    metadata:
      labels:
        app: eshop-recommendservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: eshop-recommendservice
        image: 894231944791.dkr.ecr.us-east-1.amazonaws.com/eshop-recommendservice:latest
        ports:
        - containerPort: 8093
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-recommendservice
spec:
  type: ClusterIP
  selector:
    app: eshop-recommendservice
  ports:
  - name: api
    port: 8093
    targetPort: 8093
